discussion/kv_engine/181924/181924_rev2_discussion.txt
======================================================================================================================
DESCRIPTION:

AuditDescriptorManager::lookup return reference

All events we use in the system should be registered at
build time. We do allow "clients" to submit audit events,
but only from processes with the audit privilege which
is only granted to processes which is part of the TCB.

Change-Id: Ic9bcd7d86949c17b1dcd78af6187a55c7cc35c4f

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Trond Norbye
Date: 2022-10-27 06:55:08.000000000
Message: 
Uploaded patch set 2.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-10-27 07:43:37.000000000
Message: 
Patch Set 2: Verified-1 Code-Review-1

Build Failed 

https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/23551/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/23551/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/23960/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/23960/ )

https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/31975/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/31975/ )

https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/24791/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/24791/ )

https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/11247/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/11247/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux-debug/job/master/249/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( https://cv.jenkins.couchbase.com/job/kv_engine.linux-debug/job/master/249/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/21518/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/auditd/src/audit.cc:149:5: error: use of undeclared identifier "event_filter" [clang-diagnostic-error]
    event_filter.withWLock([&rewrittenEventFilterJson](auto& filter) {
    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/auditd/src/audit.cc:155:16: error: use of undeclared identifier "event_filter" [clang-diagnostic-error]
             (*event_filter.rlock())->to_json().dump());
               ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/auditd/src/audit.cc:284:14: error: use of undeclared identifier "event_filter" [clang-diagnostic-error]
    return (*event_filter.rlock())->clone();
             ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/auditd/src/audit.h:119:5: error: use of undeclared identifier "folly" [clang-diagnostic-error]
    folly::Synchronized<std::unique_ptr<AuditEventFilter>> event_filter;
    ^

</pre> ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/21518/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/auditd/src/audit.cc:149:5:
error: use of undeclared identifier "event_filter" [clang-diagnostic-error]
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/21518/ )

https://cv.jenkins.couchbase.com/job/kv_engine-windows-master/50738/ : FAILURE

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( https://cv.jenkins.couchbase.com/job/kv_engine-windows-master/50738/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/42585/ : FAILURE

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/42585/ )

https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/22979/ : FAILURE

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/22979/ )

https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/11338/ : FAILURE

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/11338/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/20788/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
